--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <figure>
-              <img src = "https://picsum.photos/id/17/1200/400" alt="trail" />
+              <img src = "https://picsum.photos/id/17/1200/400" alt="trail" >
               <figcaption>Trail in the forest</figcaption>
         </figure>
     </main>
