--- a/pages/movies.html
+++ b/pages/movies.html
@@ -11,7 +11,7 @@
         <li>
             
             <h2>Mission Impossible</h2>
-            <img src ="../images/mission_Poster.jpg" alt = "mission impossible movie" />
+            <img src ="../images/mission_Poster.jpg" alt = "mission impossible movie" >
             <a href = "https://www.youtube.com/watch?v=avz06PDqDbM" target="_blank">
                 <p>Trailer</p>
             </a>
