--- a/pages/about.html
+++ b/pages/about.html
@@ -50,7 +50,11 @@
     <section>
         <h2>Contact</h2>
         <p>
-            Feel free to reach out to me if you have any questions or if you'd like to collaborate on a project. You can email me at atef.chela@gmail.com or connect with me on <a href = "https://www.linkedin.com/in/atef-chelaghma/" target="_blank">LinkedIn.</a>
+            Feel free to reach out to me if you have any questions or if you'd like to collaborate on a project.
+            You can email me at atef.chela@gmail.com or connect with me on
+            <a href = "https://www.linkedin.com/in/atef-chelaghma/" target="_blank">
+                LinkedIn.
+            </a>
         </p>
     </section>
 
