--- a/pages/about.html
+++ b/pages/about.html
@@ -10,6 +10,7 @@
 <body>
 
     <header>
+        <a href = "/">Back</a>
         <img src="https://avatars.githubusercontent.com/u/81826528?s=400&u=3e92f642425817729583bad23e3f1216c81561a4&v=4" alt="atef chelaghma profile image">
         <h1>Atef Chelaghma</h1>
         <p>Front end Developer</p>
