--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,3 @@
-<!-- In this example, we used semantic HTML elements such as <header>, <section>, <h1>, <h2>, <p>, and <ul> to provide meaningful structure and convey the purpose of each section. The developer's image is displayed using the <img> element with a descriptive alt attribute for accessibility. The CSS styles are added to enhance the layout and presentation of the page, making it responsive and visually appealing. -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +8,6 @@
 <body>
 
     <header>
-        <a href = "/">Back</a>
         <img src="https://avatars.githubusercontent.com/u/81826528?s=400&u=3e92f642425817729583bad23e3f1216c81561a4&v=4" alt="atef chelaghma profile image">
         <h1>Atef Chelaghma</h1>
         <p>Front end Developer</p>
@@ -19,7 +16,8 @@
     <section>
         <h2>About Me</h2>
         <p>
-            Hi there! I'm Atef Chelaghma, a passionate frontend developer with a love for building user-friendly and visually appealing web applications. 
+            Hi there! I'm Atef Chelaghma, a passionate frontend developer with a love for building user-friendly 
+            and visually appealing web applications. 
             I enjoy turning design mockups into interactive experiences and creating smooth, responsive websites.
         </p>
     </section>
@@ -40,7 +38,8 @@
         <h2>Projects</h2>
         <h3>Awesome Website</h3>
         <p>
-            I developed this project using React, CSS3, and HTML5. It's a showcase of the latest web development techniques and design trends.
+            I developed this project using React, CSS3, and HTML5. 
+            It's a showcase of the latest web development techniques and design trends.
         </p>
         <h3>Cool Portfolio</h3>
         <p>
