--- a/pages/movies.html
+++ b/pages/movies.html
@@ -13,22 +13,40 @@
         <ul>
             <li>
                 <h2>Mission Impossible</h2>
-                <img src ="../images/mission_Poster.jpg" alt = "mission impossible movie" >
-                <a href = "https://www.youtube.com/watch?v=avz06PDqDbM" target="_blank">
-                    <p>Trailer</p>
+                <img 
+                    src ="../images/mission_Poster.jpg" 
+                    alt = "mission impossible movie" 
+                >
+                <a 
+                    href = "https://www.youtube.com/watch?v=avz06PDqDbM" 
+                    target="_blank"
+                >
+                <p>Trailer</p>
                 </a>
             </li>
             <li>
                 <h2>Limitless</h2>
-                <img src ="../images/Limitless_Poster.jpg" alt = "Limitless movie" >
-                <a href = "https://www.youtube.com/watch?v=4TLppsfzQH8" target="_blank">
+                <img 
+                    src ="../images/Limitless_Poster.jpg" 
+                    alt = "Limitless movie" 
+                >
+                <a 
+                    href = "https://www.youtube.com/watch?v=4TLppsfzQH8" 
+                    target="_blank"
+                >
                 <p>Trailer</p>
                 </a>
             </li>
             <li>
                 <h2>Tetris</h2>
-                <img src = "../images/download.jpg" alt = "Tetris movie" >
-                <a href = "https://www.youtube.com/watch?v=loCVDF9Fu4g" target="_blank">
+                <img 
+                    src = "../images/download.jpg" 
+                    alt = "Tetris movie" 
+                >
+                <a 
+                    href = "https://www.youtube.com/watch?v=loCVDF9Fu4g" 
+                    target="_blank"
+                >
                 <p>Trailer</p>
                 </a>
             </li>
