add link everywhere

--- a/pages/about.html
+++ b/pages/about.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <header>
+        <nav>
+            <h1>About</h1>
+            <ul>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="./hobbies.html">HOBBIES</a></li>
+                <li><a href="./movies.html">MOVIES</a></li>
+            </ul>
+        </nav>
         <img 
             src="https://avatars.githubusercontent.com/u/81826528?s=400&u=3e92f642425817729583bad23e3f1216c81561a4&v=4" 
             alt="atef chelaghma profile image"
