--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     <header>
-        <h1>My Hobbies</h1>
+        <nav>
+            <h1>My Hobbies </h1>
+            <ul>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="./about.html">ABOUT</a></li>
+                <li><a href="./movies.html">MOVIES</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <ol>
