--- a/pages/movies.html
+++ b/pages/movies.html
@@ -8,6 +8,11 @@
 <body>
     <header>
         <h1>My Favorite Movies</h1>
+        <ul>
+            <li><a href="../index.html">HOME</a></li>
+            <li><a href="./about.html">ABOUT</a></li>
+            <li><a href="./hobbies.html">HOBBIES</a></li>
+        </ul>
     </header>
     <main>    
         <ul>
